lender/tests/fail/take_invariant.rs
// Test that Take with an invariant lend type fails covariance check.

use std::cell::Cell;

use lender::{Lend, Lender, Lending};

struct InvariantTake<L> {
    lender: L,
    n: usize,
}

impl<'lend, L> Lending<'lend> for InvariantTake<L> {
    type Lend = &'lend Cell<Option<&'lend String>>;
}

impl<L> Lender for InvariantTake<L> {
    lender::covariance_check!();

    fn next(&mut self) -> Option<Lend<'_, Self>> {
        None
    }
}

fn main() {}
